--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-beautifulsoup4==4.12.3
-pyotp==2.9.0
-pysaml2==7.5.0
-Requests==2.32.3
-urllib3==1.26.5
-locust==2.31.5
-xmlschema==2.5.1
-lxml==5.1.0
+flask==2.2.2
+requests==2.32.0
 
