changing to hub.docker.com for the 2nd time

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DOCKER_REGISTRY: hub.docker.com   # harbor.test.myfaccloud-301.com
+      DOCKER_REGISTRY: index.docker.com   # harbor.test.myfaccloud-301.com
       DOCKER_PROJECT: chunji08  # demogitops
       APP_NAME: simple-app
       IMAGE_TAG: latest  # Optional: use ${{ github.sha }} for unique tags
