--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted  # Change from 'ubuntu-latest' to 'self-hosted'
+    runs-on: [self-hosted, linux, x64]  # Change from 'ubuntu-latest' to 'self-hosted'
 
     env:
       DOCKER_REGISTRY: harbor.test.myfaccloud-301.com
