--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,7 +14,8 @@ jobs:
       DOCKER_PROJECT: demogitops
       APP_NAME: simple-app
       IMAGE_TAG: latest  # Optional: use ${{ github.sha }} for unique tags
-      GITOPS_REPO: https://github.com/chunji08/SIMPLEDEMO-GITOPS.git  # Use HTTPS format
+      OWNER: chunji08
+      GITOPS_REPO: https://github.com/${{ env.OWNER }}/SIMPLEDEMO-GITOPS.git  # Use HTTPS format
       GITOPS_BRANCH: main
 
     steps:
