--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: [self-hosted, linux, x64]  # Change from 'ubuntu-latest' to 'self-hosted'
+    runs-on: [self-hosted, linux, x64]
 
     env:
       DOCKER_REGISTRY: harbor.test.myfaccloud-301.com
       DOCKER_PROJECT: demogitops
       APP_NAME: simple-app
       IMAGE_TAG: latest  # Optional: use ${{ github.sha }} for unique tags
-      GITOPS_REPO: https://github.com/chunji08/SIMPLEDEMO-GITOPS.git  # Updated HTTPS format
+      GITOPS_REPO: chunji08/SIMPLEDEMO-GITOPS  # Use {owner}/{repo} format
       GITOPS_BRANCH: main
 
     steps:
@@ -38,10 +38,10 @@ jobs:
       - name: Checkout GitOps Repository
         uses: actions/checkout@v3
         with:
-          repository: ${{ env.GITOPS_REPO }}
+          repository: ${{ env.GITOPS_REPO }}  # Use {owner}/{repo} format
           ref: ${{ env.GITOPS_BRANCH }}
           path: gitops
-          token: ${{ secrets.GITHUB_TOKEN }}  # Use GITHUB_TOKEN for authentication
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update Image Tag in Kubernetes Manifests
         run: |
