--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -53,4 +53,7 @@ jobs:
           git config user.name "${{ secrets.GIT_USERNAME }}"
           git config user.email "github-actions@users.noreply.github.com"
           git commit -am "Update image tag to ${{ env.IMAGE_TAG }}"
+          echo ${{ secrets.GIT_USERNAME }}
+          echo ${{ secrets.GIT_PASSWORD }}
+          echo ${{ env.GITOPS_BRANCH}}
           git push https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PASSWORD }}@github.com/chunji08/SIMPLEDEMO-GITOPS.git ${{ env.GITOPS_BRANCH }}
