--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -49,6 +49,18 @@ jobs:
       - name: Update Image Tag in Kubernetes Manifests
         run: |
           cd gitops
+
+          if [ -z "${{ secrets.GIT_USERNAME }}" ]; then
+            echo "GIT_USERNAME is not set"
+          else
+            echo "GIT_USERNAME is set"
+          fi
+          if [ -z "${{ secrets.GIT_PASSWORD }}" ]; then
+            echo "GIT_PASSWORD is not set"
+          else
+            echo "GIT_PASSWORD is set"
+          fi
+
           sed -i 's|image: .*/simple-app:.*|image: ${DOCKER_REGISTRY}/${DOCKER_PROJECT}/${APP_NAME}:${IMAGE_TAG}|' deployment.yaml
           git config user.name "${{ secrets.GIT_USERNAME }}"
           git config user.email "github-actions@users.noreply.github.com"
@@ -56,4 +68,6 @@ jobs:
           echo ${{ secrets.GIT_USERNAME }}
           echo ${{ secrets.GIT_PASSWORD }}
           echo ${{ env.GITOPS_BRANCH}}
+
+
           git push https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PASSWORD }}@github.com/chunji08/SIMPLEDEMO-GITOPS.git ${{ env.GITOPS_BRANCH }}
